# cumulator

./: .cirrus.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  Pipfile  README.md  README.rst  cumulator.py  setup.cfg  setup.py  tox.ini
docs/: changelog.rst  conf.py  installation.rst  usage.rst
docs/reference/: cumulator.rst  index.rst
src/cumulator/: base.py  bonus.py  helper_functions.py  other.py
src/cumulator.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/cumulator/alge/: alge_test.py  data_selection.py
src/cumulator/countries_data/: countr_2_dig.json  country_dataset_adjusted.csv  country_dataset_helpers.py
src/cumulator/hardware/: cpu.csv  webscraper.py
src/cumulator/hardware_data/: cpu.csv  gpu.csv  run.ipynb  webscraper.py
src/cumulator/metrics_conversion_data/: CO2_metrics.json
src/cumulator/prediction_feature/: dataset.csv  mljar.py  openml_datasets_retrieval.ipynb  prediction_helper.py  regression.ipynb  visualization_helper.py
src/cumulator/prediction_feature/models/: F1_rmse.pkl  consumption_model_Random_Forest.sav  consumption_rmse.pkl  support_F1_Linear.pkl  support_consumption_Decision_Tree.pkl  support_consumption_Linear.pkl  support_consumption_Neural_Network.pkl  support_consumption_Random_Forest.pkl
src/cumulator/prediction_feature/utils/: mljar_dataset_adder.py  openml_datasets_retrieval.ipynb  regression.ipynb
src/cumulator/web_app/: app.py
src/cumulator/web_app/templates/: content.html  index.html
test/: model.pth  optimizer.pth  test.py
tests/: test_base.py  test_cumulator.py
