[metadata]
name = cumulator
version = 0.1.1
author = Felix Grimberg
author_email = felix.grimberg@hotmail.com
description = A tool to quantify and communicate the carbon footprint of the computing infrastructure, proof of concept performed using a machine learning platform
long_description = file: README.rst, CHANGELOG.rst
url = https://github.com/tristantreb/cumulator
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
	Intended Audience :: Developers
	Operating System :: OS Independent
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
	Programming Language :: Python :: Implementation :: CPython
	Programming Language :: Python :: Implementation :: PyPy
	Topic :: Utilities

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.5
zip_safe = False
include_package_data = True


[bdist_wheel]
universal = 1

[flake8]
max-line-length = 140
exclude = .tox,ci/templates

[tool:pytest]
# If a pytest section is found in one of the possible config files
# (pytest.ini, tox.ini or setup.cfg), then pytest will not look for any others,
# so if you add a pytest config section elsewhere,
# you will need to delete this section from setup.cfg.
norecursedirs =
    migrations

python_files =
    test_*.py
    *_test.py
    tests.py
addopts =
    -ra
    --strict
    --doctest-modules
    --doctest-glob=\*.rst
    --tb=short
testpaths =
    tests

[tool:isort]
force_single_line = True
line_length = 120
known_first_party = cumulator
default_section = THIRDPARTY
forced_separate = test_cumulator
not_skip = __init__.py
skip = .tox,ci/templates
